force-app/main/default/objects/PPSA_Expiry_Summary_Report__c/PPSA_Expiry_Summary_Report__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>This custom setings will deal PPSA Expiry Summary Reports data.</description>
    <label>PPSA Expiry Summary Report</label>
</CustomObject>