force-app/main/default/objects/PPSA_Expiry_Summary_Report__c/fields/Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit__c</fullName>
    <label>Business Unit</label>
    <length>225</length>
    <type>Text</type>
</CustomField>