force-app/main/default/objects/PPSA_Expiry_Summary_Report__c/fields/Search_By_Name__c.field-meta.xml
<CustomField>
    <fullName>Search_By_Name__c</fullName>
    <label>Search By Name</label>
    <length>225</length>
    <type>Text</type>
</CustomField>