force-app/main/default/objects/PPSA_Expiry_Summary_Report__c/fields/Type_of_Loan__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Loan__c</fullName>
    <label>Type of Loan</label>
    <length>225</length>
    <type>Text</type>
</CustomField>